--- a/WordPress/Resources/ar.lproj/Localizable.strings
+++ b/WordPress/Resources/ar.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-06 12:43:50+0000 */
+/* Translation-Revision-Date: 2021-09-29 13:54:08+0000 */
 /* Plural-Forms: nplurals=6; plural=(n == 0) ? 0 : ((n == 1) ? 1 : ((n == 2) ? 2 : ((n % 100 >= 3 && n % 100 <= 10) ? 3 : ((n % 100 >= 11 && n % 100 <= 99) ? 4 : 5)))); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ar */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "تم تحويل %s إلى مكوِّنات عادية";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "%s تتوافر معاينات مكوِّن التضمين قريبًا";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "لدى %s عنوان URL معين";
@@ -497,7 +497,7 @@ translators: Block name. %s: The localized block name */
 "Add a custom CSS URL here to be loaded in Reader. If you're running Calypso locally this can be something like: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css" = "أضف عنوان URL الخاص بـ CSS المخصصة هنا ليتم تحميلها في القارئ. إذا كنتَ تقوم بتشغيل Calypso محليًا، فقد يبدو هذا مثل: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css";
 
 /* Label of the button that starts the purchase of an additional redirected domain in the Domains Dashboard. */
-"Add a domain" = "Add a domain";
+"Add a domain" = "إضافة نطاق";
 
 /* No comment provided by engineer. */
 "Add a new block at any time by tapping on the + icon in the toolbar on the bottom left. " = "أضف مكوِّنًا جديدًا في أي وقت عن طريق النقر على أيقونة + الموجودة في شريط الأدوات في أسفل اليسار. ";
@@ -1504,7 +1504,7 @@ translators: Block name. %s: The localized block name */
 "Colorful backgrounds" = "خلفيات ملونة";
 
 /* translators: %d: column index. */
-"Column %d" = "Column %d";
+"Column %d" = "عمود %d";
 
 /* No comment provided by engineer. */
 "Columns Settings" = "إعدادات الأعمدة";
@@ -1747,7 +1747,7 @@ translators: Block name. %s: The localized block name */
 "Continuing with Apple" = "المتابعة عبر Apple";
 
 /* No comment provided by engineer. */
-"Convert to link" = "Convert to link";
+"Convert to link" = "تحويل إلى رابط";
 
 /* An example tag used in the login prologue screens. */
 "Cooking" = "الطهي";
@@ -1843,10 +1843,10 @@ translators: Block name. %s: The localized block name */
 "Couldn't load tags. Tap to retry." = "تعذَّر تحميل الوسوم. انقر لإعادة المحاولة.";
 
 /* Indicating that referrer couldn't be marked as spam */
-"Couldn't mark as spam" = "Couldn't mark as spam";
+"Couldn't mark as spam" = "يتعذر وضع علامة على أنه بريد مزعج";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Couldn't unmark as spam";
+"Couldn't unmark as spam" = "يتعذر عدم وضع علامة على أنه بريد مزعج";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "تعذر رفع الصورة المميزة";
@@ -2390,7 +2390,7 @@ translators: Block name. %s: The localized block name */
 "Double tap to undo last change" = "الضغط المزدوج للتراجع عن آخر تغيير";
 
 /* No comment provided by engineer. */
-"Double tap to view embed options." = "Double tap to view embed options.";
+"Double tap to view embed options." = "اضغط ضغطًا مزدوجًا لعرض خيارات التضمين.";
 
 /* Download button title */
 "Download" = "تنزيل";
@@ -2569,7 +2569,7 @@ translators: Block name. %s: The localized block name */
 "Embed media" = "تضمين وسائط";
 
 /* No comment provided by engineer. */
-"Embed options" = "Embed options";
+"Embed options" = "خيارات التضمين";
 
 /* Title for the Emoji section */
 "Emoji" = "إيموجي Emoji";
@@ -3126,7 +3126,7 @@ translators: Block name. %s: The localized block name */
 "Get the ball rolling and increase your post views by sharing your post." = "ابدأ العمل وقم بزيادة مشاهدات مقالتك عن طريق مشاركة مقالتك.";
 
 /* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
-"Get your domain" = "Get your domain";
+"Get your domain" = "احصل على نطاقك";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
 "Get your notifications faster" = "تلقي تنبيهاتك بشكل أسرع";
@@ -4008,13 +4008,13 @@ translators: Block name. %s: The localized block name */
 "Mark as Sticky" = "وضع علامة كمُثبَّت";
 
 /* Action title for unmarking referrer as spam */
-"Mark as not spam" = "Mark as not spam";
+"Mark as not spam" = "وضع علامة على أنه ليس بريدًا مزعجًا";
 
 /* An option to mark a post as seen. */
 "Mark as seen" = "وضع علامة تمت المشاهدة";
 
 /* Action title for marking referrer as spam */
-"Mark as spam" = "Mark as spam";
+"Mark as spam" = "وضع علامة مزعج";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to Mark a comment as spam. */
 "Mark as spam." = "تمييز كمزعج.";
@@ -4535,7 +4535,7 @@ translators: Block name. %s: The localized block name */
 "No posts." = "لا توجد مقالات.";
 
 /* No comment provided by engineer. */
-"No preview available" = "No preview available";
+"No preview available" = "لا توجد معاينة متاحة";
 
 /* A message title */
 "No recent posts" = "لا توجد مقالات حديثة";
@@ -5408,7 +5408,7 @@ translators: Block name. %s: The localized block name */
 "Publish immediately" = "النشر فورًا";
 
 /* Text displayed in the share extension's summary view. It describes the publish page action. */
-"Publish page on:" = "Publish page on:";
+"Publish page on:" = "انشر الصفحة في:";
 
 /* Text displayed in the share extension's summary view. It describes the publish post action. */
 "Publish post on:" = "نشر مقالة على:";
@@ -5430,7 +5430,7 @@ translators: Block name. %s: The localized block name */
 "Publishing To" = "نشر إلى";
 
 /* A short message that informs the user a page is being published to the server from the share extension. */
-"Publishing page..." = "Publishing page...";
+"Publishing page..." = "جارٍ نشر الصفحة...";
 
 /* A short message that informs the user a post is being published to the server from the share extension. */
 "Publishing post..." = "جاري نشر المقالة...";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "حفظ";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Save %ld photos as a draft page on:";
+"Save %ld photos as a draft page on:" = "احفظ %ld من الصور كصفحة مسودة في:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "حفظ صور %ld كمقالة مسودة على:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Save 1 photo as a draft page on:";
+"Save 1 photo as a draft page on:" = "احفظ صورة واحدة كصفحة مسودة في:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "حفظ صورة واحدة كمقالة مسودة على:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "حفظ كمسودة";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Save draft page on:";
+"Save draft page on:" = "حفظ صفحة المسودة في:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "حفظ مقالة مسودة على:";
@@ -5883,7 +5883,7 @@ translators: Block name. %s: The localized block name */
 "Saves this post for later." = "يحفظ هذه المقالة لوقت لاحق.";
 
 /* A short message that informs the user a draft page is being saved to the server from the share extension. */
-"Saving page…" = "Saving page…";
+"Saving page…" = "جارٍ حفظ الصفحة...";
 
 /* A short message that informs the user a draft post is being saved to the server from the share extension. */
 "Saving post…" = "جاري حفظ المقالة…";
@@ -6787,7 +6787,7 @@ translators: Block name. %s: The localized block name */
 "Tap to dismiss this card" = "إضغط  لتجاهل هذه البطاقة";
 
 /* Accessibility hint for referrer details row. */
-"Tap to display referrer web page." = "Tap to display referrer web page.";
+"Tap to display referrer web page." = "انقر لعرض صفحة ويب الموجه.";
 
 /* Message in a row indicating to tap to enter a custom value */
 "Tap to enter a custom value" = "انقر لإدخال قيمة مخصصة";
@@ -6796,10 +6796,10 @@ translators: Block name. %s: The localized block name */
 "Tap to hide the keyboard" = "أنقر لإخفاء لوحة المفاتيح";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as not spam." = "Tap to mark referrer as not spam.";
+"Tap to mark referrer as not spam." = "انقر لوضع علامة على الموجه على أنه ليس بريدًا مزعجًا.";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as spam." = "Tap to mark referrer as spam.";
+"Tap to mark referrer as spam." = "انقر لوضع علامة على الموجه على أنه بريد مزعج.";
 
 /* VoiceOver Hint to inform the user what action the expand button performs */
 "Tap to see all the tags for this post" = "أنقر لمشاهدة جميع الوسوم لهذه المقالة";
@@ -7450,7 +7450,7 @@ translators: Block name. %s: The localized block name */
 "Twitter Username" = "اسم مستخدم تويتر";
 
 /* Type menu item in share extension. */
-"Type" = "Type";
+"Type" = "النوع";
 
 /* No comment provided by engineer. */
 "Type a URL" = "اكتب رابط URL";
@@ -8880,7 +8880,7 @@ translators: Block name. %s: The localized block name */
 "later today" = "في وقتٍ لاحقٍ اليوم";
 
 /* Indicating that referrer was marked as spam */
-"marked as spam" = "marked as spam";
+"marked as spam" = "تم وضع علامة على أنه بريد مزعج";
 
 /* Word separating the current index from the total amount. I.e.: 7 of 9 */
 "of" = "من";
@@ -8904,7 +8904,7 @@ translators: Block name. %s: The localized block name */
 "unknown url" = "عنوان url غير معروف";
 
 /* Indicating that referrer was unmarked as spam */
-"unmarked as spam" = "unmarked as spam";
+"unmarked as spam" = "لم يتم وضع علامة على أنه بريد مزعج";
 
 /* Noun. Describes a site's user. */
 "user" = "مستخدم";
