--- a/WordPress/Resources/he.lproj/Localizable.strings
+++ b/WordPress/Resources/he.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-15 18:34:01+0000 */
+/* Translation-Revision-Date: 2021-09-29 11:54:53+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: he_IL */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "התוכן של %s הומר לבלוקים רגילים";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "%s תצוגות מקדימות של בלוק ההטמעה יהיו זמינות בקרוב";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "ב-%s הוגדרה כתובת URL";
@@ -497,7 +497,7 @@ translators: Block name. %s: The localized block name */
 "Add a custom CSS URL here to be loaded in Reader. If you're running Calypso locally this can be something like: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css" = "להוסיף כאן כתובת URL של CSS מותאם כדי לטעון אותה ב-Reader. אם השירות של Calypso מופעל אצלך באופן מקומי, הכתובת תוצג בצורה הבאה: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css";
 
 /* Label of the button that starts the purchase of an additional redirected domain in the Domains Dashboard. */
-"Add a domain" = "Add a domain";
+"Add a domain" = "להוסיף דומיין";
 
 /* No comment provided by engineer. */
 "Add a new block at any time by tapping on the + icon in the toolbar on the bottom left. " = "ניתן להוסיף בלוק בכל עת על ידי הקשה על הסמל '+' בסרגל הכלים שנמצא בפינה השמאלית התחתונה. ";
@@ -1504,7 +1504,7 @@ translators: Block name. %s: The localized block name */
 "Colorful backgrounds" = "רקעים צבעוניים";
 
 /* translators: %d: column index. */
-"Column %d" = "Column %d";
+"Column %d" = "טור %d";
 
 /* No comment provided by engineer. */
 "Columns Settings" = "הגדרות טורים";
@@ -1747,7 +1747,7 @@ translators: Block name. %s: The localized block name */
 "Continuing with Apple" = "להמשיך עם Apple";
 
 /* No comment provided by engineer. */
-"Convert to link" = "Convert to link";
+"Convert to link" = "להמיר לקישור";
 
 /* An example tag used in the login prologue screens. */
 "Cooking" = "בישול";
@@ -1843,10 +1843,10 @@ translators: Block name. %s: The localized block name */
 "Couldn't load tags. Tap to retry." = "לא ניתן לטעון את התגיות. יש להקיש כדי לנסות שוב.";
 
 /* Indicating that referrer couldn't be marked as spam */
-"Couldn't mark as spam" = "Couldn't mark as spam";
+"Couldn't mark as spam" = "לא ניתן לסמן כ'זבל'";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Couldn't unmark as spam";
+"Couldn't unmark as spam" = "לא ניתן לבטל את הסימון כ'זבל'";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "שגיאה בהעלאת תמונה ראשית";
@@ -2390,7 +2390,7 @@ translators: Block name. %s: The localized block name */
 "Double tap to undo last change" = "יש להקיש פעמיים כדי לבטל את השינוי האחרון";
 
 /* No comment provided by engineer. */
-"Double tap to view embed options." = "Double tap to view embed options.";
+"Double tap to view embed options." = "יש להקיש פעמיים כדי להציג את אפשרויות ההטמעה.";
 
 /* Download button title */
 "Download" = "הורדה";
@@ -2569,7 +2569,7 @@ translators: Block name. %s: The localized block name */
 "Embed media" = "להטמיע מדיה";
 
 /* No comment provided by engineer. */
-"Embed options" = "Embed options";
+"Embed options" = "אפשרויות הטמעה";
 
 /* Title for the Emoji section */
 "Emoji" = "אמוג'י";
@@ -3126,7 +3126,7 @@ translators: Block name. %s: The localized block name */
 "Get the ball rolling and increase your post views by sharing your post." = "אפשר חשיפה רבה יותר לפוסט שלך על ידי שיתוף.";
 
 /* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
-"Get your domain" = "Get your domain";
+"Get your domain" = "לקבל בעלות על דומיין משלך";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
 "Get your notifications faster" = "לקבל הודעות מהר יותר";
@@ -4008,13 +4008,13 @@ translators: Block name. %s: The localized block name */
 "Mark as Sticky" = "סימון כ'דביק'";
 
 /* Action title for unmarking referrer as spam */
-"Mark as not spam" = "Mark as not spam";
+"Mark as not spam" = "לסמל כ'לא זבל'";
 
 /* An option to mark a post as seen. */
 "Mark as seen" = "לסמן כ'נקרא'";
 
 /* Action title for marking referrer as spam */
-"Mark as spam" = "Mark as spam";
+"Mark as spam" = "לסמן כ'זבל'";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to Mark a comment as spam. */
 "Mark as spam." = "סימון כתגובת זבל.";
@@ -4535,7 +4535,7 @@ translators: Block name. %s: The localized block name */
 "No posts." = "אין פוסטים.";
 
 /* No comment provided by engineer. */
-"No preview available" = "No preview available";
+"No preview available" = "תצוגה מקדימה לא זמינה";
 
 /* A message title */
 "No recent posts" = "אין פוסטים מהזמן האחרון";
@@ -5408,7 +5408,7 @@ translators: Block name. %s: The localized block name */
 "Publish immediately" = "פרסום מיידי";
 
 /* Text displayed in the share extension's summary view. It describes the publish page action. */
-"Publish page on:" = "Publish page on:";
+"Publish page on:" = "לפרסם את העמוד במיקום:";
 
 /* Text displayed in the share extension's summary view. It describes the publish post action. */
 "Publish post on:" = "פרסום הפוסט באתר:";
@@ -5430,7 +5430,7 @@ translators: Block name. %s: The localized block name */
 "Publishing To" = "פורסם בעמוד";
 
 /* A short message that informs the user a page is being published to the server from the share extension. */
-"Publishing page..." = "Publishing page...";
+"Publishing page..." = "מפרסם את העמוד...";
 
 /* A short message that informs the user a post is being published to the server from the share extension. */
 "Publishing post..." = "מפרסם את הפוסט...";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "שמור";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Save %ld photos as a draft page on:";
+"Save %ld photos as a draft page on:" = "שמירה של %ld תמונות כעמוד טיוטה במיקום:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "שמירה של %ld תמונות כטיוטה של הפוסט במיקום:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Save 1 photo as a draft page on:";
+"Save 1 photo as a draft page on:" = "שמירה של תמונה אחת כעמוד טיוטה במיקום:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "שמירה של תמונה אחת כטיוטה של הפוסט במיקום:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "לשמור כטיוטה";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Save draft page on:";
+"Save draft page on:" = "לשמור את עמוד הטיוטה במיקום:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "שמירת טיוטה של הפוסט במיקום:";
@@ -5883,7 +5883,7 @@ translators: Block name. %s: The localized block name */
 "Saves this post for later." = "שומר את הפוסט הנוכחי למועד מאוחר יותר.";
 
 /* A short message that informs the user a draft page is being saved to the server from the share extension. */
-"Saving page…" = "Saving page…";
+"Saving page…" = "שומר את העמוד...";
 
 /* A short message that informs the user a draft post is being saved to the server from the share extension. */
 "Saving post…" = "שומר פוסט...";
@@ -6787,7 +6787,7 @@ translators: Block name. %s: The localized block name */
 "Tap to dismiss this card" = "Tap to dismiss this card";
 
 /* Accessibility hint for referrer details row. */
-"Tap to display referrer web page." = "Tap to display referrer web page.";
+"Tap to display referrer web page." = "יש להקיש כדי להציג את אתר האינטרנט של המפנה.";
 
 /* Message in a row indicating to tap to enter a custom value */
 "Tap to enter a custom value" = "יש להקיש כדי להזין ערך מותאם אישית";
@@ -6796,10 +6796,10 @@ translators: Block name. %s: The localized block name */
 "Tap to hide the keyboard" = "יש להקיש כדי להסתיר את המקלדת";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as not spam." = "Tap to mark referrer as not spam.";
+"Tap to mark referrer as not spam." = "יש להקיש כדי לבטל את הסימון של המפנה כ'זבל'.";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as spam." = "Tap to mark referrer as spam.";
+"Tap to mark referrer as spam." = "יש להקיש כדי לסמן את המפנה כ'זבל'.";
 
 /* VoiceOver Hint to inform the user what action the expand button performs */
 "Tap to see all the tags for this post" = "יש להקיש כדי לראות את כל התגיות בפוסט זה";
@@ -7450,7 +7450,7 @@ translators: Block name. %s: The localized block name */
 "Twitter Username" = "שם המשתמש בטוויטר";
 
 /* Type menu item in share extension. */
-"Type" = "Type";
+"Type" = "סוג";
 
 /* No comment provided by engineer. */
 "Type a URL" = "יש להקליד כתובת URL";
@@ -8880,7 +8880,7 @@ translators: Block name. %s: The localized block name */
 "later today" = "מאוחר יותר היום";
 
 /* Indicating that referrer was marked as spam */
-"marked as spam" = "marked as spam";
+"marked as spam" = "סומן כ'זבל'";
 
 /* Word separating the current index from the total amount. I.e.: 7 of 9 */
 "of" = "מתוך";
@@ -8904,7 +8904,7 @@ translators: Block name. %s: The localized block name */
 "unknown url" = "כתובת URL לא ידועה";
 
 /* Indicating that referrer was unmarked as spam */
-"unmarked as spam" = "unmarked as spam";
+"unmarked as spam" = "לבטל את הסימון כתגובת זבל";
 
 /* Noun. Describes a site's user. */
 "user" = "משתמש";
