--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-21 04:36:27+0000 */
+/* Translation-Revision-Date: 2021-09-28 11:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: id */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "%s diubah ke blok reguler";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "Pratinjau blok sematan %s akan segera hadir";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "URL %s telah ditetapkan ";
@@ -497,7 +497,7 @@ translators: Block name. %s: The localized block name */
 "Add a custom CSS URL here to be loaded in Reader. If you're running Calypso locally this can be something like: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css" = "Tambahkan URL CSS kustom di sini untuk dimuat di Pembaca. Jika Anda menjalankan Calypso secara lokal, URL bisa seperti: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css";
 
 /* Label of the button that starts the purchase of an additional redirected domain in the Domains Dashboard. */
-"Add a domain" = "Add a domain";
+"Add a domain" = "Tambah domain";
 
 /* No comment provided by engineer. */
 "Add a new block at any time by tapping on the + icon in the toolbar on the bottom left. " = "Tambahkan blok baru kapan saja dengan mengetuk ikon + di toolbar di kiri bawah.";
@@ -1504,7 +1504,7 @@ translators: Block name. %s: The localized block name */
 "Colorful backgrounds" = "Latar belakang berwarna";
 
 /* translators: %d: column index. */
-"Column %d" = "Column %d";
+"Column %d" = "Kolom %d";
 
 /* No comment provided by engineer. */
 "Columns Settings" = "Pengaturan Kolom";
@@ -1747,7 +1747,7 @@ translators: Block name. %s: The localized block name */
 "Continuing with Apple" = "Melanjutkan dengan Apple";
 
 /* No comment provided by engineer. */
-"Convert to link" = "Convert to link";
+"Convert to link" = "Konversikan ke tautan";
 
 /* An example tag used in the login prologue screens. */
 "Cooking" = "Memasak";
@@ -1843,10 +1843,10 @@ translators: Block name. %s: The localized block name */
 "Couldn't load tags. Tap to retry." = "Tidak bisa memuat tag. Ketuk untuk mencoba lagi.";
 
 /* Indicating that referrer couldn't be marked as spam */
-"Couldn't mark as spam" = "Couldn't mark as spam";
+"Couldn't mark as spam" = "Tidak dapat menandai sebagai spam";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Couldn't unmark as spam";
+"Couldn't unmark as spam" = "Tidak dapat menghilangkan tanda sebagai spam";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "Tidak dapat mengunggah gambar andalan";
@@ -2390,7 +2390,7 @@ translators: Block name. %s: The localized block name */
 "Double tap to undo last change" = "Ketuk dua kali untuk mengurungkan perubahan terakhir";
 
 /* No comment provided by engineer. */
-"Double tap to view embed options." = "Double tap to view embed options.";
+"Double tap to view embed options." = "Ketuk dua kali untuk melihat pilihan sematan.";
 
 /* Download button title */
 "Download" = "Unduh";
@@ -2569,7 +2569,7 @@ translators: Block name. %s: The localized block name */
 "Embed media" = "Sematkan media";
 
 /* No comment provided by engineer. */
-"Embed options" = "Embed options";
+"Embed options" = "Pilihan sematan";
 
 /* Title for the Emoji section */
 "Emoji" = "Emotikon";
@@ -3126,7 +3126,7 @@ translators: Block name. %s: The localized block name */
 "Get the ball rolling and increase your post views by sharing your post." = "Mulai pos dan tingkatkan tampilan pos Anda dengan membagikannya.";
 
 /* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
-"Get your domain" = "Get your domain";
+"Get your domain" = "Dapatkan domain Anda";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
 "Get your notifications faster" = "Dapatkan pemberitahuan lebih cepat";
@@ -4008,7 +4008,7 @@ translators: Block name. %s: The localized block name */
 "Mark as Sticky" = "Tandai sebagai Lekat";
 
 /* Action title for unmarking referrer as spam */
-"Mark as not spam" = "Mark as not spam";
+"Mark as not spam" = "Tandai bukan spam";
 
 /* An option to mark a post as seen. */
 "Mark as seen" = "Tandai sebagai telah dilihat";
@@ -4535,7 +4535,7 @@ translators: Block name. %s: The localized block name */
 "No posts." = "Tidak ada pos.";
 
 /* No comment provided by engineer. */
-"No preview available" = "No preview available";
+"No preview available" = "Pratinjau tidak tersedia";
 
 /* A message title */
 "No recent posts" = "Tidak ada pos terbaru";
@@ -5408,7 +5408,7 @@ translators: Block name. %s: The localized block name */
 "Publish immediately" = "Terbitkan segera";
 
 /* Text displayed in the share extension's summary view. It describes the publish page action. */
-"Publish page on:" = "Publish page on:";
+"Publish page on:" = "Menerbitkan halaman pada:";
 
 /* Text displayed in the share extension's summary view. It describes the publish post action. */
 "Publish post on:" = "Terbitkan pos di:";
@@ -5430,7 +5430,7 @@ translators: Block name. %s: The localized block name */
 "Publishing To" = "Memublikasikan ke";
 
 /* A short message that informs the user a page is being published to the server from the share extension. */
-"Publishing page..." = "Publishing page...";
+"Publishing page..." = "Menerbitkan halaman...";
 
 /* A short message that informs the user a post is being published to the server from the share extension. */
 "Publishing post..." = "Menerbitkan pos...";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "Simpan";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Save %ld photos as a draft page on:";
+"Save %ld photos as a draft page on:" = "Simpan %ld foto sebagai konsep halaman pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "Simpan %ld foto sebagai pos konsep pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Save 1 photo as a draft page on:";
+"Save 1 photo as a draft page on:" = "Simpan 1 foto sebagai konsep halaman pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "Simpan 1 foto sebagai konsep pos pada:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "Simpan sebagai Konsep";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Save draft page on:";
+"Save draft page on:" = "Simpan konsep halaman pada:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "Simpan konsep pos pada:";
@@ -5883,7 +5883,7 @@ translators: Block name. %s: The localized block name */
 "Saves this post for later." = "Menyimpan pos ini untuk nanti.";
 
 /* A short message that informs the user a draft page is being saved to the server from the share extension. */
-"Saving page…" = "Saving page…";
+"Saving page…" = "Menyimpan halaman...";
 
 /* A short message that informs the user a draft post is being saved to the server from the share extension. */
 "Saving post…" = "Menyimpan pos…";
@@ -6787,7 +6787,7 @@ translators: Block name. %s: The localized block name */
 "Tap to dismiss this card" = "Ketuk untuk membuang kartu ini";
 
 /* Accessibility hint for referrer details row. */
-"Tap to display referrer web page." = "Tap to display referrer web page.";
+"Tap to display referrer web page." = "Ketuk untuk menampilkan halaman web pengarah.";
 
 /* Message in a row indicating to tap to enter a custom value */
 "Tap to enter a custom value" = "Ketuk untuk memasukkan nilai kustom";
@@ -6796,10 +6796,10 @@ translators: Block name. %s: The localized block name */
 "Tap to hide the keyboard" = "Ketuk untuk menyembunyikan keyboard";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as not spam." = "Tap to mark referrer as not spam.";
+"Tap to mark referrer as not spam." = "Ketuk untuk menandai pengarah sebagai bukan spam.";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as spam." = "Tap to mark referrer as spam.";
+"Tap to mark referrer as spam." = "Ketuk untuk menandai pengarah sebagai spam.";
 
 /* VoiceOver Hint to inform the user what action the expand button performs */
 "Tap to see all the tags for this post" = "Ketuk untuk melihat semua tag untuk pos ini";
@@ -7450,7 +7450,7 @@ translators: Block name. %s: The localized block name */
 "Twitter Username" = "Nama Pengguna Twitter";
 
 /* Type menu item in share extension. */
-"Type" = "Type";
+"Type" = "Jenis";
 
 /* No comment provided by engineer. */
 "Type a URL" = "Ketik URL";
@@ -8880,7 +8880,7 @@ translators: Block name. %s: The localized block name */
 "later today" = "belakangan hari ini";
 
 /* Indicating that referrer was marked as spam */
-"marked as spam" = "marked as spam";
+"marked as spam" = "ditandai sebagai spam";
 
 /* Word separating the current index from the total amount. I.e.: 7 of 9 */
 "of" = "dari";
@@ -8904,7 +8904,7 @@ translators: Block name. %s: The localized block name */
 "unknown url" = "url tidak diketahui";
 
 /* Indicating that referrer was unmarked as spam */
-"unmarked as spam" = "unmarked as spam";
+"unmarked as spam" = "tanda sebagai spam dihilangkan";
 
 /* Noun. Describes a site's user. */
 "user" = "pengguna";
