--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-15 18:35:03+0000 */
+/* Translation-Revision-Date: 2021-09-29 09:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "%s convertito in blocchi regolari";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "Le anteprime %s dei blocchi incorporate saranno presto disponibili";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "%s ha un URL impostato";
@@ -497,7 +497,7 @@ translators: Block name. %s: The localized block name */
 "Add a custom CSS URL here to be loaded in Reader. If you're running Calypso locally this can be something like: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css" = "Aggiungi qui l'URL del CSS personalizzato per essere caricato in Reader. Se stai utilizzando Calypso localmente, potrebbe essere qualcosa come: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css";
 
 /* Label of the button that starts the purchase of an additional redirected domain in the Domains Dashboard. */
-"Add a domain" = "Add a domain";
+"Add a domain" = "Aggiungi un dominio";
 
 /* No comment provided by engineer. */
 "Add a new block at any time by tapping on the + icon in the toolbar on the bottom left. " = "Aggiungi un nuovo blocco in qualsiasi momento toccando l'icona + sulla barra degli strumenti nella parte inferiore sinistra. ";
@@ -1504,7 +1504,7 @@ translators: Block name. %s: The localized block name */
 "Colorful backgrounds" = "Sfondi colorati";
 
 /* translators: %d: column index. */
-"Column %d" = "Column %d";
+"Column %d" = "Colonna %d";
 
 /* No comment provided by engineer. */
 "Columns Settings" = "Impostazioni delle colonne";
@@ -1747,7 +1747,7 @@ translators: Block name. %s: The localized block name */
 "Continuing with Apple" = "Continua con Apple";
 
 /* No comment provided by engineer. */
-"Convert to link" = "Convert to link";
+"Convert to link" = "Converti in link";
 
 /* An example tag used in the login prologue screens. */
 "Cooking" = "Cucina";
@@ -1843,10 +1843,10 @@ translators: Block name. %s: The localized block name */
 "Couldn't load tags. Tap to retry." = "I tag non possono essere caricati. Tocca per riprovare. ";
 
 /* Indicating that referrer couldn't be marked as spam */
-"Couldn't mark as spam" = "Couldn't mark as spam";
+"Couldn't mark as spam" = "Impossibile contrassegnare come spam";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Couldn't unmark as spam";
+"Couldn't unmark as spam" = "Impossibile annullare il contrassegno come spam";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "Impossibile caricare l'immagine in evidenza";
@@ -2390,7 +2390,7 @@ translators: Block name. %s: The localized block name */
 "Double tap to undo last change" = "Tocca due volte per annullare l'ultima modifica";
 
 /* No comment provided by engineer. */
-"Double tap to view embed options." = "Double tap to view embed options.";
+"Double tap to view embed options." = "Tocca due volte per visualizzare le opzioni incorporate.";
 
 /* Download button title */
 "Download" = "Scarica";
@@ -2569,7 +2569,7 @@ translators: Block name. %s: The localized block name */
 "Embed media" = "Incorpora elemento multimediale";
 
 /* No comment provided by engineer. */
-"Embed options" = "Embed options";
+"Embed options" = "Incorpora le opzioni";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3126,7 +3126,7 @@ translators: Block name. %s: The localized block name */
 "Get the ball rolling and increase your post views by sharing your post." = "Inizia subito e aumenta le visualizzazioni sui tuoi articoli tramite la condivisione.";
 
 /* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
-"Get your domain" = "Get your domain";
+"Get your domain" = "Ottieni il tuo dominio";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
 "Get your notifications faster" = "Ricevi le tue notifiche più rapidamente";
@@ -4008,13 +4008,13 @@ translators: Block name. %s: The localized block name */
 "Mark as Sticky" = "Contrassegna come In evidenza";
 
 /* Action title for unmarking referrer as spam */
-"Mark as not spam" = "Mark as not spam";
+"Mark as not spam" = "Contrassegna come non spam";
 
 /* An option to mark a post as seen. */
 "Mark as seen" = "Contrassegna come letto";
 
 /* Action title for marking referrer as spam */
-"Mark as spam" = "Mark as spam";
+"Mark as spam" = "Contrassegna come spam";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to Mark a comment as spam. */
 "Mark as spam." = "Segnala come spam.";
@@ -4535,7 +4535,7 @@ translators: Block name. %s: The localized block name */
 "No posts." = "Nessun articolo.";
 
 /* No comment provided by engineer. */
-"No preview available" = "No preview available";
+"No preview available" = "Nessuna anteprima disponibile";
 
 /* A message title */
 "No recent posts" = "Nessun articolo recente";
@@ -5408,7 +5408,7 @@ translators: Block name. %s: The localized block name */
 "Publish immediately" = "Pubblica immediatamente";
 
 /* Text displayed in the share extension's summary view. It describes the publish page action. */
-"Publish page on:" = "Publish page on:";
+"Publish page on:" = "Pubblicazione della pagina su:";
 
 /* Text displayed in the share extension's summary view. It describes the publish post action. */
 "Publish post on:" = "Pubblica articolo su:";
@@ -5430,7 +5430,7 @@ translators: Block name. %s: The localized block name */
 "Publishing To" = "Pubblicazione su";
 
 /* A short message that informs the user a page is being published to the server from the share extension. */
-"Publishing page..." = "Publishing page...";
+"Publishing page..." = "Pubblicazione della pagina in corso...";
 
 /* A short message that informs the user a post is being published to the server from the share extension. */
 "Publishing post..." = "Pubblicazione dell'articolo in corso...";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "Salva";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Save %ld photos as a draft page on:";
+"Save %ld photos as a draft page on:" = "Salva %ld foto come pagina della bozza su:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "Salva %ld foto come bozza su:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Save 1 photo as a draft page on:";
+"Save 1 photo as a draft page on:" = "Salva 1 foto come pagina della bozza su:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "Salva 1 foto come bozza su:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "Salva come Bozza";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Save draft page on:";
+"Save draft page on:" = "Salva la pagina della bozza su:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "Salva la bozza dell'articolo su:";
@@ -5883,7 +5883,7 @@ translators: Block name. %s: The localized block name */
 "Saves this post for later." = "Salva questo articolo per dopo";
 
 /* A short message that informs the user a draft page is being saved to the server from the share extension. */
-"Saving page…" = "Saving page…";
+"Saving page…" = "Salvataggio della pagina in corso...";
 
 /* A short message that informs the user a draft post is being saved to the server from the share extension. */
 "Saving post…" = "Salvataggio dell'articolo…";
@@ -6787,7 +6787,7 @@ translators: Block name. %s: The localized block name */
 "Tap to dismiss this card" = "Tocca per ignorare questa scheda";
 
 /* Accessibility hint for referrer details row. */
-"Tap to display referrer web page." = "Tap to display referrer web page.";
+"Tap to display referrer web page." = "Tocca per visualizzare la pagina web del referrer.";
 
 /* Message in a row indicating to tap to enter a custom value */
 "Tap to enter a custom value" = "Tocca per inserire un valore personalizzato";
@@ -6796,10 +6796,10 @@ translators: Block name. %s: The localized block name */
 "Tap to hide the keyboard" = "Tocca per nascondere la tastiera";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as not spam." = "Tap to mark referrer as not spam.";
+"Tap to mark referrer as not spam." = "Tocca per contrassegnare il referrer come non spam.";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as spam." = "Tap to mark referrer as spam.";
+"Tap to mark referrer as spam." = "Tocca per contrassegnare il referrer come spam.";
 
 /* VoiceOver Hint to inform the user what action the expand button performs */
 "Tap to see all the tags for this post" = "Tocca per visualizzare tutti i tag per questo articolo";
@@ -7450,7 +7450,7 @@ translators: Block name. %s: The localized block name */
 "Twitter Username" = "Nome utente su Twitter";
 
 /* Type menu item in share extension. */
-"Type" = "Type";
+"Type" = "Tipo";
 
 /* No comment provided by engineer. */
 "Type a URL" = "Digita un URL";
@@ -8880,7 +8880,7 @@ translators: Block name. %s: The localized block name */
 "later today" = "Più tardi";
 
 /* Indicating that referrer was marked as spam */
-"marked as spam" = "marked as spam";
+"marked as spam" = "contrassegnato come spam";
 
 /* Word separating the current index from the total amount. I.e.: 7 of 9 */
 "of" = "di";
@@ -8904,7 +8904,7 @@ translators: Block name. %s: The localized block name */
 "unknown url" = "url sconosciuto";
 
 /* Indicating that referrer was unmarked as spam */
-"unmarked as spam" = "unmarked as spam";
+"unmarked as spam" = "contrassegno come spam annullato";
 
 /* Noun. Describes a site's user. */
 "user" = "utente";
