--- a/WordPress/Resources/tr.lproj/Localizable.strings
+++ b/WordPress/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-15 18:32:25+0000 */
+/* Translation-Revision-Date: 2021-09-29 21:54:09+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: tr */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "%s normal bloklara dönüştürüldü";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "%s Gömülü blok önizlemeleri yakında geliyor";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "%s için URL ayarlanmış ";
@@ -497,7 +497,7 @@ translators: Block name. %s: The localized block name */
 "Add a custom CSS URL here to be loaded in Reader. If you're running Calypso locally this can be something like: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css" = "Reader'a yüklenmek üzere buraya özel bir CSS URL'si ekleyin. Calypso'yu yerel olarak çalıştırıyorsanız şu şekilde olabilir: http:\/\/192.168.15.23:3000\/calypso\/reader-mobile.css";
 
 /* Label of the button that starts the purchase of an additional redirected domain in the Domains Dashboard. */
-"Add a domain" = "Add a domain";
+"Add a domain" = "Alan adı ekle";
 
 /* No comment provided by engineer. */
 "Add a new block at any time by tapping on the + icon in the toolbar on the bottom left. " = "Sol alttaki araç çubuğundaki + simgesine dokunarak istediğiniz zaman yeni bir blok ekleyin. ";
@@ -1504,7 +1504,7 @@ translators: Block name. %s: The localized block name */
 "Colorful backgrounds" = "Renkli arka planlar";
 
 /* translators: %d: column index. */
-"Column %d" = "Column %d";
+"Column %d" = "Sütun %d";
 
 /* No comment provided by engineer. */
 "Columns Settings" = "Sütun Ayarları";
@@ -1747,7 +1747,7 @@ translators: Block name. %s: The localized block name */
 "Continuing with Apple" = "Apple ile devam ediliyor";
 
 /* No comment provided by engineer. */
-"Convert to link" = "Convert to link";
+"Convert to link" = "Bağlantıya dönüştür";
 
 /* An example tag used in the login prologue screens. */
 "Cooking" = "Yemek pişirme";
@@ -1843,10 +1843,10 @@ translators: Block name. %s: The localized block name */
 "Couldn't load tags. Tap to retry." = "Etiketler yüklenemiyor. Tekrar denemek için dokunun.";
 
 /* Indicating that referrer couldn't be marked as spam */
-"Couldn't mark as spam" = "Couldn't mark as spam";
+"Couldn't mark as spam" = "Spam olarak işaretlenemedi";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Couldn't unmark as spam";
+"Couldn't unmark as spam" = "Spam işareti kaldırılamadı";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "Öne çıkan görsel yüklenemedi";
@@ -2390,7 +2390,7 @@ translators: Block name. %s: The localized block name */
 "Double tap to undo last change" = "Son değişikliği geri almak için çift dokunun";
 
 /* No comment provided by engineer. */
-"Double tap to view embed options." = "Double tap to view embed options.";
+"Double tap to view embed options." = "Gömme seçeneklerini görüntülemek için iki kez dokunun.";
 
 /* Download button title */
 "Download" = "İndir";
@@ -2569,7 +2569,7 @@ translators: Block name. %s: The localized block name */
 "Embed media" = "Medya gömün";
 
 /* No comment provided by engineer. */
-"Embed options" = "Embed options";
+"Embed options" = "Gömme seçenekleri";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3126,7 +3126,7 @@ translators: Block name. %s: The localized block name */
 "Get the ball rolling and increase your post views by sharing your post." = "Harekete geçin ve yazınızı paylaşarak yazınızın görüntülenme sayısını artırın.";
 
 /* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
-"Get your domain" = "Get your domain";
+"Get your domain" = "Alan adınızı alın";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
 "Get your notifications faster" = "Bildirimlerinizi daha hızlı alın";
@@ -4008,7 +4008,7 @@ translators: Block name. %s: The localized block name */
 "Mark as Sticky" = "Yapışkan olarak işaretle";
 
 /* Action title for unmarking referrer as spam */
-"Mark as not spam" = "Mark as not spam";
+"Mark as not spam" = "Spam değil olarak işaretle";
 
 /* An option to mark a post as seen. */
 "Mark as seen" = "Görüldü olarak işaretle";
@@ -4535,7 +4535,7 @@ translators: Block name. %s: The localized block name */
 "No posts." = "Yazı yok.";
 
 /* No comment provided by engineer. */
-"No preview available" = "No preview available";
+"No preview available" = "Önizleme yok";
 
 /* A message title */
 "No recent posts" = "Güncel yazı yok";
@@ -5408,7 +5408,7 @@ translators: Block name. %s: The localized block name */
 "Publish immediately" = "Hemen yayımla";
 
 /* Text displayed in the share extension's summary view. It describes the publish page action. */
-"Publish page on:" = "Publish page on:";
+"Publish page on:" = "Sayfayı şurada yayınla:";
 
 /* Text displayed in the share extension's summary view. It describes the publish post action. */
 "Publish post on:" = "Yazıyı şurada yayımla:";
@@ -5430,7 +5430,7 @@ translators: Block name. %s: The localized block name */
 "Publishing To" = "Yayımlanıyor";
 
 /* A short message that informs the user a page is being published to the server from the share extension. */
-"Publishing page..." = "Publishing page...";
+"Publishing page..." = "Sayfa yayımlanıyor...";
 
 /* A short message that informs the user a post is being published to the server from the share extension. */
 "Publishing post..." = "Yazı yayımlanıyor...";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "Kaydet";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Save %ld photos as a draft page on:";
+"Save %ld photos as a draft page on:" = "%ld fotoğrafı şuraya taslak sayfa olarak kaydet:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "%ld fotoğrafı taslak yazı olarak şuraya kaydet:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Save 1 photo as a draft page on:";
+"Save 1 photo as a draft page on:" = "1 fotoğrafı şuraya taslak sayfa olarak kaydet:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "1 fotoğrafı taslak yazı olarak şuraya kaydet:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "Taslak olarak kaydet";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Save draft page on:";
+"Save draft page on:" = "Taslak sayfasını şuraya kaydet:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "Taslak yazıyı şuraya kaydet:";
@@ -5883,7 +5883,7 @@ translators: Block name. %s: The localized block name */
 "Saves this post for later." = "Bu yazıyı sonrası için kaydeder.";
 
 /* A short message that informs the user a draft page is being saved to the server from the share extension. */
-"Saving page…" = "Saving page…";
+"Saving page…" = "Sayfa kaydediliyor…";
 
 /* A short message that informs the user a draft post is being saved to the server from the share extension. */
 "Saving post…" = "Yazı kaydediliyor...";
@@ -6787,7 +6787,7 @@ translators: Block name. %s: The localized block name */
 "Tap to dismiss this card" = "Bu kartı kapatmak için dokunun";
 
 /* Accessibility hint for referrer details row. */
-"Tap to display referrer web page." = "Tap to display referrer web page.";
+"Tap to display referrer web page." = "Yönlendiren web sayfasını görüntülemek için dokunun.";
 
 /* Message in a row indicating to tap to enter a custom value */
 "Tap to enter a custom value" = "Özel bir değer girmek için dokunun";
@@ -6796,10 +6796,10 @@ translators: Block name. %s: The localized block name */
 "Tap to hide the keyboard" = "Klavyeyi gizlemek için dokunun";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as not spam." = "Tap to mark referrer as not spam.";
+"Tap to mark referrer as not spam." = "Yönlendireni spam değil olarak işaretlemek için dokunun.";
 
 /* Accessibility hint for referrer action row. */
-"Tap to mark referrer as spam." = "Tap to mark referrer as spam.";
+"Tap to mark referrer as spam." = "Yönlendireni spam olarak işaretlemek için dokunun. ";
 
 /* VoiceOver Hint to inform the user what action the expand button performs */
 "Tap to see all the tags for this post" = "Bu yazıya ait tüm etiketleri görmek için dokunun";
@@ -7450,7 +7450,7 @@ translators: Block name. %s: The localized block name */
 "Twitter Username" = "Twitter kullanıcı adı";
 
 /* Type menu item in share extension. */
-"Type" = "Type";
+"Type" = "Tür";
 
 /* No comment provided by engineer. */
 "Type a URL" = "Bir URL yazın";
@@ -8880,7 +8880,7 @@ translators: Block name. %s: The localized block name */
 "later today" = "bugün daha sonra";
 
 /* Indicating that referrer was marked as spam */
-"marked as spam" = "marked as spam";
+"marked as spam" = "spam olarak işaretlendi";
 
 /* Word separating the current index from the total amount. I.e.: 7 of 9 */
 "of" = ",";
@@ -8904,7 +8904,7 @@ translators: Block name. %s: The localized block name */
 "unknown url" = "bilinmeyen url";
 
 /* Indicating that referrer was unmarked as spam */
-"unmarked as spam" = "unmarked as spam";
+"unmarked as spam" = "istenmeyen posta işaretini kaldır";
 
 /* Noun. Describes a site's user. */
 "user" = "kullanıcı";
